--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.profiles.active=dev
 
 #阿里云 vod
 #不同的服务器，地址不同
-aliyun.vod.file.keyid=LTAI5tHQegMgrjEYi4fNXysk
-aliyun.vod.file.keysecret=6CwrPQLR7n6Ui3lUMaYBMsgDJmNQ75
+#aliyun.vod.file.keyid=xxx
+#aliyun.vod.file.keysecret=xxxx
 
 # 最大上传单个文件大小：默认1M
 spring.servlet.multipart.max-file-size=1024MB
