--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.profiles.active=dev
 
 #阿里云 OSS
 #不同的服务器，地址不同
-aliyun.oss.file.endpoint=oss-cn-guangzhou.aliyuncs.com
-aliyun.oss.file.keyid=LTAI5tHQegMgrjEYi4fNXysk
-aliyun.oss.file.keysecret=6CwrPQLR7n6Ui3lUMaYBMsgDJmNQ75
+#aliyun.oss.file.endpoint=XXXX
+#aliyun.oss.file.keyid=XXX
+#aliyun.oss.file.keysecret=XXX
 #bucket可以在控制台创建，也可以使用java代码创建
-aliyun.oss.file.bucketname=aynihao
+#aliyun.oss.file.bucketname=XXX
 
 # nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
