--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -31,9 +31,9 @@ mybatis-plus.mapper-locations=classpath:com/atguigu/educenter/mapper/xml/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 微信开放平台 appid
-wx.open.app_id=wxed9954c01bb89b47
+#wx.open.app_id=xxx
 # 微信开放平台 appsecret
-wx.open.app_secret=a7482517235173ddb4083788de60b90e
+#wx.open.app_secret=xxxx
 # 微信开放平台 重定向url
 wx.open.redirect_url=http://localhost:8160/api/ucenter/wx/callback
 
